# rs-gallium

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.integration  Makefile  README.md
.claude/skills/compare-ref/: SKILL.md
.claude/skills/ollama-narrow/: SKILL.md
.github/workflows/: ai-review.yml
configs/: default.toml  default.yaml  default.yaml.bak  gemma4-e4b.toml  gemma4-e4b.yaml  gemma4.toml  gemma4.yaml  lfm2.toml  lfm2.yaml  openai.toml  openai.yaml  qwen3.6.toml  qwen3.toml  qwen3.yaml
crates/gallium-agent/: Cargo.toml
crates/gallium-agent/src/: agent.rs  agent.udl  config.rs  github.rs  lib.rs  llm.rs  llm_gallium.rs  main.rs  mcp.rs  mcp_client.rs  memory.rs  protocol.rs  provider.rs  react.rs  session.rs  skill.rs  tool.rs
crates/gallium-agent/src/appserver/: mod.rs
crates/gallium-cli/: Cargo.toml
crates/gallium-cli/src/: main.rs
crates/gallium-core/: Cargo.toml
crates/gallium-core/src/: lib.rs  model.rs  quantized.rs  sampling.rs  turbo_quant.rs
crates/gallium-core/src/kernels/: avx512.rs
crates/gallium-models/: Cargo.toml
crates/gallium-models/src/: gemma4.rs  gemma4_q.rs  gemma4_vision.rs  gpt_oss_q.rs  lib.rs  qwen35_q.rs
crates/gallium-models/tests/: integration.rs
docs/: TODO.md  adding-models.md  architecture.md  building-blocks.md  gemma4.md  gguf-tensor-names.md  gpt-oss.md  performance.md  qwen35.md  target-models.md
references/: .gitignore  README.md  setup.sh
swift/: Package.resolved  Package.swift
swift/Sources/AgentBridge/: GalliumFFI.swift
swift/Sources/AgentBridgeFFI/: gallium_agentFFI.h  module.modulemap
swift/Sources/Audio/: AudioCapture.swift
swift/Sources/CEditline/: CEditline.h  module.modulemap
swift/Sources/GalliumCLI/: main.swift
swift/Sources/ScreenCapture/: ScreenCapture.swift
swift/Sources/TTS/: TextToSpeech.swift
swift/Sources/Util/: Config.swift  Logging.swift
testsuite/: README.md  extract_response.sh  gallium_cli.sh  matrix_runner.sh  runner.sh
testsuite/backends/: gemma4-26b.toml  gemma4.toml  gpt-5.6-luna.toml  gpt-oss.toml  gpt-oss.yaml  lfm2.toml  qwen3.6.toml
testsuite/models/: gemma4-gguf.sh  gemma4-safetensors.sh  gpt-oss-gguf.sh  openai.sh  qwen35-gguf.sh
testsuite/testcases/coding/: check.sh  prompt.txt
testsuite/testcases/memory_state/: check.sh  prompt.txt
testsuite/testcases/needle_in_haystack/: check.sh  prompt.txt
testsuite/testcases/refactoring/: check.sh  counter.go  prompt.txt
testsuite/testcases/sw_boundary/: check.sh  prompt.txt
winui/: GalliumWinUI.sln
winui/GalliumWinUI/: App.xaml  App.xaml.cs  ChatMessage.cs  Directory.Build.targets  GalliumWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
winui/GalliumWinUI/Models/: AppConfig.cs
winui/GalliumWinUI/Services/: AgentService.cs  SttService.cs  TtsService.cs
