[package]
name = "gallium-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "gallium_agent"
crate-type = ["lib", "staticlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "gallium-agent"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
gallium-core.workspace = true
candle-core.workspace = true
gallium-models.workspace = true
tokenizers.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hf-hub.workspace = true
thiserror = "1"
ureq = { version = "2", features = ["json", "native-tls"] }
native-tls = "0.2"
glob = "0.3"
parking_lot.workspace = true
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
