[package]
name = "gallium-cli"
version.workspace = true
edition.workspace = true

[dependencies]
gallium-core = { workspace = true }
gallium-models = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
